--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - S@H_Skywalker_webpage</title>
+  <title>Anakin Skywalker</title>
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Josefin+Sans:wght@300&family=Merriweather:wght@900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./style.css">
 
